--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>dev.langchain4j</groupId>
+			<artifactId>langchain4j-open-ai-spring-boot-starter</artifactId>
+			<version>0.33.0</version>
+		</dependency>
+
 	</dependencies>
-	
+
+
+
 	<build>
 		<plugins>
 			<plugin>
